; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/crypto/extr_tls_wolfssl.c_tls_deinit.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/crypto/extr_tls_wolfssl.c_tls_deinit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tls_context = type { i32 }

@tls_global = common dso_local global %struct.tls_context* null, align 8
@tls_ref_count = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @tls_deinit(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.tls_context*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = call %struct.tls_context* @wolfSSL_CTX_get_ex_data(i8* %4, i32 0)
  store %struct.tls_context* %5, %struct.tls_context** %3, align 8
  %6 = load %struct.tls_context*, %struct.tls_context** %3, align 8
  %7 = load %struct.tls_context*, %struct.tls_context** @tls_global, align 8
  %8 = icmp ne %struct.tls_context* %6, %7
  br i1 %8, label %9, label %12

9:                                                ; preds = %1
  %10 = load %struct.tls_context*, %struct.tls_context** %3, align 8
  %11 = call i32 @os_free(%struct.tls_context* %10)
  br label %12

12:                                               ; preds = %9, %1
  %13 = load i8*, i8** %2, align 8
  %14 = bitcast i8* %13 to i32*
  %15 = call i32 @wolfSSL_CTX_free(i32* %14)
  %16 = load i64, i64* @tls_ref_count, align 8
  %17 = add nsw i64 %16, -1
  store i64 %17, i64* @tls_ref_count, align 8
  %18 = load i64, i64* @tls_ref_count, align 8
  %19 = icmp eq i64 %18, 0
  br i1 %19, label %20, label %24

20:                                               ; preds = %12
  %21 = call i32 (...) @wolfSSL_Cleanup()
  %22 = load %struct.tls_context*, %struct.tls_context** @tls_global, align 8
  %23 = call i32 @os_free(%struct.tls_context* %22)
  store %struct.tls_context* null, %struct.tls_context** @tls_global, align 8
  br label %24

24:                                               ; preds = %20, %12
  ret void
}

declare dso_local %struct.tls_context* @wolfSSL_CTX_get_ex_data(i8*, i32) #1

declare dso_local i32 @os_free(%struct.tls_context*) #1

declare dso_local i32 @wolfSSL_CTX_free(i32*) #1

declare dso_local i32 @wolfSSL_Cleanup(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
